...
    <string name="error_page_button">TRY AGAIN</string>
    <string name="error_page_title_unsupported_scheme">The address wasn’t understood</string>
    <string name="error_page_content_text_unsupported_scheme">You might need to install other software to open this address.</string>


    <!-- Label used in the contextmenu shown when long-pressing on a link -->
    <string name="contextmenu_link_share">Share link</string>
    <!-- Label used in the contextmenu shown when long-pressing on a link -->
    <string name="contextmenu_link_copy">Copy link address</string>
    <!-- Label used in the contextmenu shown when long-pressing on an image -->
    <string name="contextmenu_image_share">Share image</string>
    <!-- Label used in the contextmenu shown when long-pressing on an image -->
    <string name="contextmenu_image_copy">Copy image address</string>
    <!-- Label used in the contextmenu shown when long-pressing on an image -->
    <string name="contextmenu_image_save">Save image</string>
    <!-- Label used in the contextmenu shown when long-pressing on a link -->
    <string name="contextmenu_open_in_new_tab">Open link in new tab</string>
    <!-- Label used in the contextmenu shown when long-pressing on a image -->
    <string name="contextmenu_open_image_in_new_tab">Open image in new tab</string>

    <string name="new_name_upgrade_page_title">We have a new look!</string>
    <!-- The %1$s here is a placeholder for "Firefox Lite"-->
    <string name="new_name_upgrade_page_text">With the evolved product, we bring you a newly refreshed %1$s, with new name and new logo.</string>
...
    <!-- Subtitle for survey notification posted after launching the app on the 3rd time -->
    <string name="survey_notification_description">Shape a better product for Indonesia</string>

    <string name="survey_notification_url" translatable="false">https://qsurvey.mozilla.com/s3/Rocket-Existing-User-Survey&amp;sglocale=%1$s</string>

    <!-- A message that is shown for a few seconds that indicates there's a new tab loaded in the background. -->
    <string name="new_background_tab_hint">New tab opened</string>

    <!-- The label of an action that gives users an option to switch the newly loaded background tab to the foreground. This is shown alongside the temporary message which notify users a new tab is opened. -->
    <string name="new_background_tab_switch">SWITCH</string>

    <!-- Sticky notification to inform user we are in the process of changing default browser -->
    <string name="setting_default_browser_notification_title">Changing settings…</string>
    <string name="setting_default_browser_notification_text">It may take a while</string>
    <string name="setting_default_browser_notification_clickable_text">Tap to set default browser</string>

...
