...
    <item name="empty_view_image" type="id"/>
    <item name="telemetry_category_name" type="id"/>
    <item name="telemetry_subcategory_id" type="id"/>

    <!-- Menu Items -->
    <item name="menu_bookmark" type="id"/>
    <item name="menu_download" type="id"/>
    <item name="menu_history" type="id"/>
    <item name="menu_screenshots" type="id"/>
    <item name="menu_turbomode" type="id"/>
    <item name="btn_private_browsing" type="id"/>
    <item name="menu_night_mode" type="id"/>
    <item name="menu_blockimg" type="id"/>
...
    <item name="menu_delete" type="id"/>
    <item name="menu_preferences" type="id"/>
    <item name="menu_exit" type="id"/>
    <item name="menu_pin_shortcut" type="id"/>

    <!-- Bottom Bar Items -->
    <item name="bottom_bar_tab_counter" type="id"/>
    <item name="bottom_bar_menu" type="id"/>
    <item name="bottom_bar_home" type="id"/>
    <item name="bottom_bar_search" type="id"/>
    <item name="bottom_bar_capture" type="id"/>
    <item name="bottom_bar_pin_shortcut" type="id"/>
    <item name="bottom_bar_bookmark" type="id"/>
...
